--- a/ansible/playbook.yaml
+++ b/ansible/playbook.yaml
@@ -3,4 +3,58 @@
   tasks: # aqui começa lista de tarefas 
   - name: alterando nome dos hosts 
     hostname:
-      name: '{{ new_hostname }}'
+      name: "{{ new_hostname }}"
+        
+  - name: instalar dependencias do Docker
+    apt:
+      name: "{{ itens }}"
+      state: present
+      update_cache: yes
+    loop:
+      - apt-transport-https
+      - ca-certificates
+      - curl
+      - gnupg-agent
+      - software-properties-common
+        
+  - name: adicioanr chave gpg docker
+    apt_key:
+      url: https://download.docker.com/linux/ubuntu/gpg
+      state: present
+        
+  - name: adicionar repo do docker
+    apt_repository:
+      url: deb https://dowload.docker.com/linux/ubuntu bionic stable
+      state: present
+        
+  - name: instalar docker
+    apt:
+      name: "{ {itens} }"
+      state: latest 
+      update_cache: yes
+    loop:
+      - docker-ce
+      - docker-ce-cli
+      - containerd.io
+      - docker-compose
+          
+  - name: instalar python 
+      apt:
+        name: "{ {item} }"
+        state: present
+        update_cache: yes
+      loop:
+        - pyhton3
+        - pip
+            
+
+  - name: Instalar plugin Ansible para gerir docker
+    pip:
+      name: docker
+
+
+  handlers:
+    - name: reiniciar docker
+      service:
+        name: docker
+        state: restarted
